<resources>
    <string name="app_name">m14_retrofit</string>
    <string name="surname">Surname:</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="country_label">Country:</string>
    <string name="city_label">City:</string>
    <string name="contacts">Contacts:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="nationality">Nationality:</string>
    <string name="age_label">age:</string>
    <string name="update_user">Update user</string>
    <string name="user_photo">User photo</string>
</resources>