<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iw_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/user_photo"/>
    <TextView
        android:id="@+id/tw_first_name"
        style="@style/customText"
        tools:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/iw_photo"
        app:layout_constraintStart_toEndOf="@+id/iw_photo"
        android:layout_marginStart="70dp"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
        android:id="@+id/tw_last_name"
        tools:text="@string/surname"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tw_first_name"
        android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="@+id/tw_first_name"
        app:layout_constraintEnd_toEndOf="@+id/tw_first_name"
        app:layout_constraintBottom_toBottomOf="@+id/iw_photo"/>
    <TextView
        android:id="@+id/tw_address"
        android:text="@string/address"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iw_photo"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tw_country_label"
        android:text="@string/country_label"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_address"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tw_country"
        tools:text="Russia"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_address"
        app:layout_constraintStart_toEndOf="@id/tw_country_label"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tw_city_label"
        android:text="@string/city_label"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_country"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tw_city"
        tools:text="Norilsk"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_country"
        app:layout_constraintStart_toStartOf="@id/tw_country"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tw_contacts"
        android:text="@string/contacts"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tw_city"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tw_email_label"
        android:text="@string/email_label"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_contacts"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tw_email"
        tools:text="test@test.com"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        app:layout_constraintTop_toBottomOf="@id/tw_contacts"
        app:layout_constraintStart_toStartOf="@id/tw_country"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tw_phone_label"
        android:text="@string/phone_label"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_email"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tw_phone"
        tools:text="+7 999-99-99-99"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_email"
        app:layout_constraintStart_toStartOf="@id/tw_country"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tw_age_label"
        android:text="@string/age_label"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_phone"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tw_age"
        tools:text="36"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_age_label"
        app:layout_constraintStart_toStartOf="@id/iw_photo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tw_nationality_label"
        android:text="@string/nationality"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_age"
        app:layout_constraintStart_toStartOf="@+id/iw_photo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tw_nationality"
        tools:text="Russian"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_nationality_label"
        app:layout_constraintStart_toStartOf="@id/iw_photo"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/b_update"
        android:text="@string/update_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_nationality"
        android:layout_marginTop="40dp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>